--- a/react-quick-start/src/index.html
+++ b/react-quick-start/src/index.html
@@ -7,11 +7,13 @@
     <script src="libs/react.development.js"></script>
     <script src="libs/react-dom.development.js"></script>
     <script src="libs/babel.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./components/lists/lists-style.css">
 </head>
 <body>
     <div id="root"></div>
-
+    
+    <script type="text/babel" src="./components/input/input-component.jsx"></script>
+    <script type="text/babel" src="./components/lists/lists-component.jsx"></script>
     <script type="text/babel" src="App.js"></script>
     <script type="text/babel" src="index.js"></script>
 </body>
